--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -124,7 +124,7 @@
             android:layout_marginTop="32dp"
             android:layout_marginEnd="32dp"
             android:layout_weight="6"
-            android:text="@string/title_activity_login"
+            android:text="@string/other_method"
             android:textAlignment="center"
             android:textAppearance="@style/TextAppearance.AppCompat.Widget.PopupMenu.Header"
             android:textColor="@color/white"
@@ -145,8 +145,8 @@
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/text_metodo"
-            app:srcCompat="@drawable/icon_google1"
-            tools:ignore="ContentDescription,HardcodedText" />
+            app:srcCompat="@drawable/ic_google_plus"
+            tools:ignore="ContentDescription,HardcodedText,VectorDrawableCompat" />
 
         <ProgressBar
             android:id="@+id/loading_sign_up"
@@ -160,6 +160,31 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <View
+            android:id="@+id/view"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="2dp"
+            android:background="@color/white"
+            app:layout_constraintEnd_toStartOf="@+id/text_metodo"
+            app:layout_constraintHorizontal_bias="1.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/sign_up" />
+
+        <View
+            android:id="@+id/view2"
+            android:layout_width="0dp"
+            android:layout_height="1dp"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="32dp"
+            android:background="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/text_metodo"
+            app:layout_constraintTop_toBottomOf="@+id/sign_up" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
